src/styles/modules/_block-weather-tip.styl
#block--weather-tip
  +above(m)
    text-align right
  > a
    display block
    background-color $module-weather-tip-background-color
    box-shadow $module-weather-tip-box-shadow
    font-family $module-weather-tip-text-font
    text-decoration none
    text-transform $module-weather-tip-text-transform
    color $module-weather-tip-text-color
    font-size $module-weather-tip-text-size-mobile
    line-height rem(29px)
    margin 0
    text-align center
    padding rem(15px)

    +above(m)
      display inline-block
      font-size $module-weather-tip-text-size-desktop
      min-width 36%

    &:before
      background-color: $module-weather-tip-icon-color
      background-repeat: no-repeat
      background-size: cover
      content: " "
      display inline-block
      height rem(18.5px)
      width rem(29px)
      margin-right: .5rem
      transition: background-color .1s ease-in
      vertical-align text-bottom
      mask: embedurl("../sprites/weather.svg", "utf8") no-repeat 50% 50%/100% auto

